Fix navbar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@
       color: #a8dadc;
   }
   
-  li {
+  .countdownList-item {
     color: #457b9d;
     display: inline-block;
     font-size: 2em;
@@ -67,7 +67,7 @@
     
   }
   
-  li span {
+  .countdownList-item span {
     color: #e63946;
     display: block;
     font-size: 10rem;
